---------------------------------------------------------------------------
Version 5.7.10  [V5-BETA] (rgerhards), 2011-03-??
---------------------------------------------------------------------------
Version 5.7.9  [V5-BETA] (rgerhards), 2011-03-16
- improved testbench
  among others, life tests for ommysql (against a test database) have
  been added, valgrind-based testing enhanced, ...
- enhance: fallback *at runtime* to epoll_create if epoll_create1 is not
  available. Thanks to Michael Biebl for analysis and patch!
- bugfix: failover did not work correctly if repeated msg reduction was on
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=236
  affected directive was: $ActionExecOnlyWhenPreviousIsSuspended on
- bugfix: minor memory leak in omlibdbi (< 1k per instance and run)
- bugfix: (regression) omhdfs did no longer compile
- bugfix: omlibdbi did not use password from rsyslog.conf
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=203
---------------------------------------------------------------------------
Version 5.7.8  [V5-BETA] (rgerhards), 2011-03-09
- systemd support somewhat improved (can now take over existing log sockt)
- bugfix: discard action did not work under some circumstances
  fixes: http://bugzilla.adiscon.com/show_bug.cgi?id=217
- bugfix: file descriptor leak in gnutls netstream driver
  fixes: http://bugzilla.adiscon.com/show_bug.cgi?id=222
---------------------------------------------------------------------------
Version 5.7.7  [V5-BETA] (rgerhards), 2011-03-02
- bugfix: potential abort condition when $RepeatedMsgReduction set to on
  as well as potentially in a number of other places where MsgDup() was
  used. This only happened when the imudp input module was used and it
  depended on name resolution not yet had taken place. In other words,
  this was a strange problem that could lead to hard to diagnose 
  instability. So if you experience instability, chances are good that
  this fix will help.